force-app/main/default/objects/custom_create242__c/custom_create242__c.object-meta.xml
<CustomObject>
    <label>Custom created object242</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects242</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>