force-app/main/default/objects/custom_create242__c/fields/custom_create_242field518__c.field-meta.xml
<CustomField>
    <fullName>custom_create_242field518__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 242field518</label>
    <type>Checkbox</type>
</CustomField>