force-app/main/default/objects/custom_create242__c/fields/custom_create_242field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_242field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 242field525</label>
    <type>Checkbox</type>
</CustomField>